# celeste-python

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG_V1.md  CLAUDE.md  CONTRIBUTING.md  GRADIUM_STT_SUMMARY.md  LICENSE  Makefile  README.md  mureka.md  pyproject.toml
.agents/skills/celeste-python/: SKILL.md
.agents/skills/celeste-python/evals/: evals.json
.agents/skills/celeste-python/references/: anti-patterns.md  public-api.md  repo-map.md  sdk-architecture.md  verification.md
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml
docs/: mureka.md
examples/: music_generation_example.py
notebooks/: anthropic_compat.ipynb  celeste-colab-quickstart.ipynb  multimodal-embeddings.ipynb  vertexai-example.ipynb  working-with-images.ipynb
src/celeste/: __init__.py  artifacts.py  auth.py  authentication_context.py  client.py  constraints.py  core.py  credentials.py  exceptions.py  grounding.py  http.py  io.py  messages.py  mime_types.py  models.py  parameters.py  py.typed  registry.py  streaming.py  structured_outputs.py  telemetry.py  tools.py  types.py  utils.py  websocket.py
src/celeste/modalities/: __init__.py
src/celeste/modalities/audio/: __init__.py  client.py  constraints.py  io.py  models.py  parameters.py  streaming.py  voices.py
src/celeste/modalities/embeddings/: __init__.py  client.py  io.py  models.py  parameters.py
src/celeste/modalities/images/: __init__.py  client.py  io.py  models.py  parameters.py  streaming.py
src/celeste/modalities/segmentation/: __init__.py  client.py  io.py  models.py  parameters.py
src/celeste/modalities/text/: __init__.py  client.py  grounding.py  io.py  models.py  parameters.py  streaming.py
src/celeste/modalities/videos/: __init__.py  client.py  io.py  models.py  parameters.py
src/celeste/namespaces/: __init__.py  domains.py
src/celeste/pricing/: __init__.py  calculator.py  cost.py  registry.py  tracker.py
src/celeste/protocols/: __init__.py
src/celeste/protocols/chatcompletions/: __init__.py  client.py  config.py  parameters.py  streaming.py  tools.py
src/celeste/protocols/openresponses/: __init__.py  client.py  config.py  parameters.py  streaming.py  tools.py
src/celeste/providers/: __init__.py  api_references.md
src/celeste/providers/anthropic/: __init__.py
src/celeste/providers/bfl/: __init__.py
src/celeste/providers/byteplus/: __init__.py
src/celeste/providers/cohere/: __init__.py
src/celeste/providers/deepseek/: __init__.py
src/celeste/providers/elevenlabs/: __init__.py
src/celeste/providers/fal/: __init__.py
src/celeste/providers/google/: __init__.py  auth.py  utils.py
src/celeste/providers/gradium/: __init__.py
src/celeste/providers/groq/: __init__.py
src/celeste/providers/huggingface/: __init__.py
src/celeste/providers/mistral/: __init__.py
src/celeste/providers/moonshot/: __init__.py
src/celeste/providers/ollama/: __init__.py
src/celeste/providers/openai/: __init__.py
src/celeste/providers/openresponses/: __init__.py
src/celeste/providers/openrouter/: __init__.py  config.py
src/celeste/providers/topazlabs/: __init__.py
src/celeste/providers/xai/: __init__.py
src/celeste/utils/: __init__.py  image.py  mime.py
templates/: README.md
templates/modalities/{modality_slug}/: client.py.template  io.py.template  parameters.py.template  streaming.py.template
templates/modalities/{modality_slug}/tests/: __init__.py.template
templates/protocols/{protocol_slug}/: __init__.py.template  client.py.template  config.py.template  parameters.py.template  streaming.py.template  tools.py.template
tests/: testing_guidelines.md
tests/audio-recognition/Gradium/: test_gradium_realtime_mic.py  test_gradium_simple.py  test_gradium_stt.py  test_gradium_stt_streaming.py
tests/integration_tests/: __init__.py  conftest.py
tests/integration_tests/audio/: test_generate.py  test_speak.py  test_stream_speak.py  test_transcribe.py
tests/integration_tests/embeddings/: conftest.py  test_embed.py  test_embed_audio.py  test_embed_image.py  test_embed_media.py  test_embed_video.py
tests/integration_tests/images/: conftest.py  test_edit.py  test_generate.py  test_stream_edit.py  test_stream_generate.py  test_upscale.py
tests/integration_tests/segmentation/: test_segment.py
tests/integration_tests/test_text_generation/: __init__.py  test_anthropic.py  test_cohere.py  test_generate.py  test_google.py  test_mistral.py  test_openai.py
tests/integration_tests/text/: conftest.py  test_analyze.py  test_analyze_audio.py  test_analyze_document.py  test_analyze_image.py  test_analyze_video.py  test_generate.py  test_reasoning.py  test_stream_analyze_audio.py  test_stream_analyze_document.py  test_stream_analyze_image.py  test_stream_analyze_video.py  test_stream_generate.py  test_tool_choice.py  test_tools.py
tests/integration_tests/videos/: test_edit.py  test_generate.py
tests/unit_tests/: _telemetry_helpers.py  conftest.py  test_anthropic_max_tokens_default.py  test_anthropic_native_replay.py  test_artifacts.py  test_audio_voices.py  test_auth.py  test_authentication_context.py  test_client.py  test_constraints.py  test_core.py  test_cost_tracker.py  test_credentials.py  test_dispatcher_delegation.py  test_elevenlabs_audio_transcribe.py  test_embeddings_input.py  test_embeddings_multimodal.py  test_exceptions.py  test_fal_segmentation.py  test_google_grounding.py  test_google_images_interactions.py  test_google_interactions_step_reconstruction.py  test_google_native_replay.py  test_google_text_dispatch.py  test_google_text_interactions_fallback.py  test_google_tools_mapper.py  test_google_videos_interactions.py  test_groq_audio_transcribe.py  test_http.py  test_init.py  test_io.py  test_mime_types.py  test_mistral_audio_transcribe.py  test_models.py  test_openai_audio_transcribe.py  test_parameter_wire_contracts.py  test_parameters.py  test_pricing.py  test_protocol_base_url.py  test_provider_api_templates.py  (+20 more)
tests/unit_tests/utils/: __init__.py  test_image.py
(+321 files in other folders)
