[project]
name = "celeste-ai"
version = "0.2.9"
description = "Open source, type-safe primitives for multi-modal AI. All capabilities, all providers, one interface"
authors = [{name = "Kamilbenkirane", email = "kamil@withceleste.ai"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["ai", "multimodal", "sdk", "openai", "anthropic", "claude", "gemini", "text-generation", "image-generation", "video-generation", "embeddings"]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://withceleste.ai"
Documentation = "https://withceleste.ai/docs"
Repository = "https://github.com/withceleste/celeste-python"
Issues = "https://github.com/withceleste/celeste-python/issues"

[project.optional-dependencies]
text-generation = ["celeste-text-generation>=0.2.9"]
image-generation = ["celeste-image-generation>=0.2.8"]
video-generation = ["celeste-video-generation>=0.2.8"]
all = [
    "celeste-text-generation>=0.2.9",
    "celeste-image-generation>=0.2.8",
    "celeste-video-generation>=0.2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.0",
    "pytest-randomly>=4.0",
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests>=2.31.0",
    "bandit[toml]>=1.7.5",
    "pre-commit>=3.5.0",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
celeste-text-generation = { workspace = true }
celeste-image-generation = { workspace = true }
celeste-video-generation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/celeste"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
pythonpath = [
    "src",
    "packages/text-generation/src",
    "packages/image-generation/src",
    "packages/video-generation/src",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: quick checks for critical paths",
    "integration: marks tests as integration tests (require API keys)",
]

[tool.coverage.run]
branch = true
# dynamic_context handled by pytest-cov's --cov-context option

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
# Same as Black's default
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes (unused imports, undefined names)
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (upgrade syntax for newer Python)
    "B",    # flake8-bugbear (catches common bugs)
    "SIM",  # flake8-simplify (code simplification)
    "RUF",  # Ruff-specific rules
    "ANN",  # flake8-annotations (enforce type annotations)
    "A",    # flake8-builtins (prevent shadowing builtins)
]
ignore = [
    "E501",  # Line too long - trust formatter's judgment
    "SIM108", # Use ternary operator instead of if-else-block (sometimes less readable)
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Match Black's style
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["celeste"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # No docstrings required in tests

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
# Strict type checking for production code
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Require type hints
disallow_any_unimported = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Relax for tests
disallow_incomplete_defs = false
disable_error_code = ["override", "return-value", "arg-type", "call-arg", "assignment", "no-any-return"]

[[tool.mypy.overrides]]
module = "httpx"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx_sse"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "celeste_text_generation.client",
    "celeste_text_generation.providers.*",
    "celeste_image_generation.client",
    "celeste_image_generation.providers.*",
    "celeste_video_generation.client",
    "celeste_video_generation.providers.*",
]
disable_error_code = ["override", "return-value", "arg-type", "call-arg", "assignment", "no-any-return"]

[tool.bandit]
exclude_dirs = [".venv", "__pycache__"]
skips = ["B101"] # Skip B101 (assert_used) since we use pytest

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py"] # Allow assertions in test files
